@startuml

title __MODEL's Class Diagram__\n

  namespace Model {
    class Model.Administrator {
        + Administrator()
    }
  }
  

  namespace Model {
    class Model.Coordinator {
        + Coordinator()
    }
  }
  

  namespace Model {
    class Model.Parcel {
        - ID : int
        - address : String
        - assignedPostmanID : int
        - coordinates : Point
        {static} - count : AtomicInteger
        - date : Date
        + Parcel()
        + equals()
        + getAddress()
        + getAssignedPostmanID()
        + getCoordinates()
        + getDate()
        + getID()
        {static} + pointToString()
        + setAddress()
        + setAssignedPostmanID()
        + setCoordinates()
        {static} + setCount()
        + toString()
    }
  }
  

  namespace Model {
    class Model.Parcel.ParcelBuilder {
        - ID : int
        - address : String
        - assignedPostmanID : int
        - coordinates : Point
        {static} - count : AtomicInteger
        - date : Date
        + ParcelBuilder()
        + address()
        + assignedPostmanID()
        + build()
        + coordinates()
    }
  }
  

  namespace Model {
    class Model.Postman {
        + Postman()
    }
  }
  

  namespace Model {
    class Model.User {
        - ID : int
        {static} - count : AtomicInteger
        - name : String
        - password : String
        - username : String
        + User()
        + User()
        + getID()
        + getName()
        + getPassword()
        + getType()
        + getUsername()
        {static} + setCount()
        + setName()
        + setPassword()
        + setUserame()
    }
  }
  

  namespace Model {
    enum Type {
      ADMINISTRATOR
      COORDINATOR
      POSTMAN
    }
  }
  

  namespace Model {
    class Model.UserFactory {
        + getUser()
    }
  }
  

  Model.Administrator .up.|> java.io.Serializable
  Model.Administrator -up-|> Model.User
  Model.Coordinator .up.|> java.io.Serializable
  Model.Coordinator -up-|> Model.User
  Model.Parcel .up.|> java.io.Serializable
  Model.Parcel +-down- Model.Parcel.ParcelBuilder
  Model.Postman .up.|> java.io.Serializable
  Model.Postman -up-|> Model.User
  Model.User .up.|> java.io.Serializable
  Model.User o-- Model.User.Type : type
  Model.User +-down- Model.User.Type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
